--- a/pages/dashboard/overview/redeem-reward.module.scss
+++ b/pages/dashboard/overview/redeem-reward.module.scss
@@ -1,17 +1,15 @@
 @import "styles/base";
 
 .container {
-  //width: $container-width;
   font-family: $primary-font;
   justify-content: center;
   display: flex;
-  background-color: rgba($black,0.3);
+  background-color: rgba($black, 0.3);
   width: 100vw;
   height: 100vh;
   position: fixed;
   z-index: 10;
   top: 0;
-
 
 
   .content {
@@ -72,4 +70,88 @@
       }
     }
   }
+}
+
+
+@media screen and (max-width: 1280px) {
+
+
+  .container {
+    .content {
+      width: 600px;
+
+      .rewards {
+        align-items: start;
+        gap: 30px;
+
+        .reward {
+          padding: 30px 10px;
+          width: 150px;
+
+          h1 {
+            margin: 5px;
+            font-size: $large-paragraph;
+            font-weight: 600;
+          }
+
+          h3 {
+            margin: 0;
+            font-weight: 600;
+            font-size: $small-paragraph;
+
+          }
+
+          svg {
+            width: 40px;
+            height: 40px;
+          }
+        }
+      }
+    }
+  }
+
+}
+
+
+@media screen and (max-width: 768px) {
+
+  .container {
+    button {
+      width: 200px;
+    }
+  }
+
+}
+
+@media screen and (max-width: 640px) {
+
+  .container {
+    .content {
+      padding: 15px;
+      width: 95%;
+
+      .rewards {
+        gap: 10px;
+        .reward {
+          padding: 20px 5px;
+
+          h1 {
+            margin: 5px;
+            font-size: $small-paragraph;
+            font-weight: 600;
+          }
+
+          h3 {
+            margin: 0;
+            font-weight: 600;
+            font-size: 9px;
+
+          }
+
+        }
+      }
+
+    }
+  }
+
 }
