--- a/components/home/slide.module.scss
+++ b/components/home/slide.module.scss
@@ -1,26 +1,18 @@
 @import '/styles/base';
 
 .container {
-  height: 600px;
-  display: flex;
-  align-items: center;
-  background-image: url("/images/home-play.png");
-  background-size: cover;
   border-radius: 50px;
   margin: $container-margin;
   width: $container-width;
-  position: relative;
-  overflow: clip;
   font-family: $primary-font;
 
 
-  .filter {
-    height: 1200px;
-    background-color: $black;
-    opacity: 0.7;
-    width: 1000px;
-    rotate: 106deg;
-    position: absolute;
+  .eachSlideEffect > div {
+    display: flex;
+    align-items: center;
+    background-size: cover;
+    height: 500px;
+    border-radius: 50px;
   }
 
   .content {
@@ -43,13 +35,10 @@
 
 @media screen and (max-width: 1280px) {
   .container {
-    height: 400px;
-    border-radius: 30px;
 
-
-    .filter {
-      width: 770px;
-      height: 850px;
+    .eachSlideEffect > div {
+      height: 450px;
+      border-radius: 30px;
     }
 
     .content {
@@ -66,13 +55,9 @@
 
 @media screen and (max-width: 768px) {
   .container {
-    height: 300px;
-    width: $container-width;
-    margin: $container-margin;
-
-    .filter {
-      width: 470px;
-      height: 500px;
+    .eachSlideEffect > div {
+      height: 300px;
+      border-radius: 30px;
     }
 
     .content {
